--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/pngl" href="/src/assets/felsephe-icon.png" />
+    <link rel="icon" type="image/pngl" href="/assets/felsephe-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#701C1C" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#701C1C" media="(prefers-color-scheme: dark)" />
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
